--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 					</div>
 				</div>
 
-				<button class="button2">	
+				<button type="button" class="button2">	
 					<span>—&nbsp;&nbsp;ЗАКАЗАТЬ ЗВОНОК</span>
 				</button>
 
@@ -215,7 +215,7 @@
 
 			</div>
 
-			<button class="button1">	
+			<button type="button" class="button1">	
 				<span>—&nbsp;&nbsp;ЗАКАЗАТЬ ЗВОНОК</span>
 			</button>
 
@@ -278,7 +278,7 @@
 						<p>Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться.</p>
 					</div>
 					<div class="slide8_button2">	
-						<button class="slide8_2_button2">	
+						<button type="button" class="slide8_2_button2">	
 							<span>—&nbsp;&nbsp;ЗАКАЗАТЬ ЗВОНОК</span>
 						</button>
 					</div>
