--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 				<div class="slide1_header">
 					<h1><span class="slide1_h_w">ЛУЧШЕЕ УСТРОЙСТВО ДЛЯ ПРОФЕССИОНАЛЬНОГО МАЙНИНГА - </span><span class="slide1_h_y">ASIC BITMAIN ANTMINER S9</span></h1>
 				</div>
+
+				<div class="adaptivepic"></div>
 					
 				<div class="slide1_button">
 					<p><img src="../2022-04-25/images/bullet.png"><span>Высокая производительность</span></p>
